--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,6 @@ aside.w-72 {
 .custom-css .rounded-full {
   border-radius: 0px 20px;
 }
+.mobile-section .text-4xl.font-bold.text-white{
+  margin-top: 1.5rem;
+}
